--- a/style.css
+++ b/style.css
@@ -1,12 +1,163 @@
-@media screen and (max-width: 900px) and (min-width: 600px) {
- 
-}
-
 	body {
 		background-color: whitesmoke ;
+		font-size: 100%;
 	}
+
 	li{
-		color: darkblue;
-		font-family: sans-serif;
+		color: black;
+		font-family: sans-serif; serif;
 
 	}
+	p{
+		font-family: serif;
+		font-size: 30px;
+		font-weight: bold;
+
+	}
+	h1{
+		font-family: serif;
+		font-weight: bold;
+		margin: 40px;
+
+	}
+@media screen and (max-width: 400px){
+	body{
+		background-color: whitesmoke;
+
+	}
+
+	li{
+		color: black;
+		font-family: sans-serif;
+		font-size: 45px;
+		font-weight: bold;
+		margin: 20px;
+	}
+
+	p{
+
+		font-family: sans-serif;
+		font-size: 60px;
+		font-weight: bold;
+	}
+
+	h1{
+		font-family: serif;
+		font-weight: bold;
+		margin: 40px;
+	}
+}
+
+@media screen and (max-width: 600px){
+	body{
+		background-color: whitesmoke;
+
+	}
+
+	li{
+		color: black;
+		font-family: sans-serif;
+		font-size: 45px;
+		font-weight: bold;
+		margin: 20px;
+	}
+
+	p{
+
+		font-family: sans-serif;
+		font-size: 60px;
+		font-weight: bold;
+	}
+
+	h1{
+		font-family: serif;
+		font-weight: bold;
+		margin: 40px;
+	}
+}
+
+@media screen and (max-width: 200px){
+	body{
+		background-color: whitesmoke;
+
+	}
+
+	li{
+		color: black;
+		font-family: sans-serif;
+		font-size: 45px;
+		font-weight: bold;
+		margin: 60px;
+	}
+
+	p{
+
+		font-family: sans-serif;
+		font-size: 100px;
+		font-weight: bold;
+	}
+
+	h1{
+		font-family: serif;
+		font-weight: bold;
+		font-size: 90px;
+		margin: 60px;
+	}
+}
+
+
+@media screen and (mini-width: 800px){
+	body{
+		background-color: whitesmoke;
+
+	}
+
+	li{
+		color: black;
+		font-family: sans-serif;
+		font-size: 65px;
+		font-weight: bold;
+		margin: 40px;
+	}
+
+	p{
+
+		font-family: sans-serif;
+		font-size: 80px;
+		font-weight: bold;
+	}
+
+	h1{
+		font-family: serif;
+		font-weight: bold;
+		margin: 50px;
+	}
+}
+
+@media screen and (mini-width: 1000px){
+	body{
+		background-color: whitesmoke;
+
+	}
+
+	li{
+		color: black;
+		font-family: sans-serif;
+		font-size: 75px;
+		font-weight: bold;
+		margin: 40px;
+	}
+
+	p{
+
+		font-family: sans-serif;
+		font-size: 90px;
+		font-weight: bold;
+	}
+
+	h1{
+		font-family: serif;
+		font-weight: bold;
+		margin: 40px;
+	}
+}
